--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "tslint": "~5.12.1",
     "typescript": "~3.3.3",
     "gts": "~0.9.0"
+  },
+  "dependencies": {
+    "rxjs": "~6.4.0"
   }
 }
