--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "check": "gts check",
     "clean": "gts clean",
-    "compile": "tsc -p . && rollup -c",
+    "declaration": "tsc -p .",
+    "precompile": "npm run declaration",
+    "compile": "rollup -c",
     "fix": "gts fix",
+    "precheck": "gts fix",
     "prepare": "npm run compile",
     "pretest": "npm run compile",
     "posttest": "npm run check"
